Comentarios e correções recomendadas